--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,33 @@
 body{
-  background-color: lightgrey;
+  /* background-color: lightgrey; */
+  margin : 0;
+  text-align: center;
+}
+h1{
+  margin-top: 0;
+}
+.top-container{
+  background-color: #D6E4E5;
+  position: relative;
+  padding-top: 100px;
+}
+.middle-container {
+  height: 200px;
+  width: 200px;
+  background-color: red;
+}
+.bottom-container {
+  height: 200px;
+  width: 200px;
+  background-color: blue;
+}
+.top-cloud {
+  position: absolute;
+  top: 50px;
+  right: 450px;
+}
+.bottom-cloud {
+  position: absolute;
+  left: 450px;
+  bottom: 300px;
 }
