--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@ body{
   margin : 0;
   text-align: center;
   font-family: 'Merriweather', serif;
+  color: #40514E;
 }
 h1{
   margin: 50px auto 0 auto;
@@ -12,12 +13,32 @@ h1{
 h2 {
   font-size: 2rem;
   font-family: 'Montserrat', sans-serif;
-  font-weight: normal;
+  /* font-weight: normal; */
   color: #497174;
 }
 h3 {
    font-family: 'Montserrat', sans-serif;
    color: #EB6440;
+}
+p {
+  line-height: 2;
+}
+hr {
+  width: 5%;
+  border: dotted lightgrey 7px;
+  border-bottom: none;
+}
+a {
+  color: #497174;
+  font-family: 'Montserrat', sans-serif;
+  text-decoration: none;
+  font-weight: bold;
+  margin: 0 20px ;
+  font-size: 1rem;
+}
+a:hover {
+  color: #eaf6f6;
+  font-weight: normal;
 }
 .top-container{
   background-color: #D6E4E5;
@@ -35,13 +56,19 @@ h3 {
   bottom: 300px;
 }
 .profile-image {
-  width: 15%;
+  width: 40%;
+}
+.profile {
+  margin: 100px auto;
+  width: 30%;
+}
+.skills {
+  margin: 100px auto;
 }
 .skill-row {
   width: 50%;
   margin: 100px auto;
   text-align: left;
-  line-height: 2;
 }
 .computer-image{
   width: 25%;
@@ -53,6 +80,42 @@ h3 {
   margin-left: 30px;
   float: right;
 }
-.footer-link {
-  color: #EB6440;
+.contact-me {
+  margin: 50px auto;
+  width: 50%;
+}
+.contact-btn {
+  background: #60a4a8;
+  background-image: -webkit-linear-gradient(top, #60a4a8, #497174);
+  background-image: -moz-linear-gradient(top, #60a4a8, #497174);
+  background-image: -ms-linear-gradient(top, #60a4a8, #497174);
+  background-image: -o-linear-gradient(top, #60a4a8, #497174);
+  background-image: linear-gradient(to bottom, #60a4a8, #497174);
+  -webkit-border-radius: 10;
+  -moz-border-radius: 10;
+  border-radius: 10px;
+  font-family: 'Montserrat', sans-serif;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.contact-btn:hover {
+  background: #71b9bd;
+  background-image: -webkit-linear-gradient(top, #71b9bd, #599094);
+  background-image: -moz-linear-gradient(top, #71b9bd, #599094);
+  background-image: -ms-linear-gradient(top, #71b9bd, #599094);
+  background-image: -o-linear-gradient(top, #71b9bd, #599094);
+  background-image: linear-gradient(to bottom, #71b9bd, #599094);
+  text-decoration: none;
+}
+.bottom-container {
+  background-color: #72b5ba;
+  padding: 50px 0 20px;
+  font-size: 0.8em;
+}
+.copyright {
+  color: #eaf6f6;
+  padding: 20px 0;
 }
